--- a/src/contentscript/overlay/root/components/SystemPopup/pages/ConnectedAccountsModal/Modal.module.scss
+++ b/src/contentscript/overlay/root/components/SystemPopup/pages/ConnectedAccountsModal/Modal.module.scss
@@ -122,7 +122,9 @@
   color: #636363;
 
   p {
+    width: 100%;
     padding-bottom: .3rem;
+    word-wrap: break-word;
   }
 }
 
